--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Try2</string>
     <string name="hello_world">Hello world!</string>
     <string name="click">click</string>
+    <string name="click2">click2</string>
     <string name="action_settings">Settings</string>
 </resources>
